--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,12 @@
 .App {
   text-align: center;
+
+
  
 }
 
 .App-logo {
-  height: 40vmin;
+  height: rem;
   pointer-events: none;
 }
 
@@ -15,18 +17,50 @@
 }
 
 .mt20 {
+ 
   margin-top: 10rem;
+  color: rgb(93, 12, 126);
+}
+
+.flex {
+  display: flex;
+  margin-bottom: 5rem;
+}
+
+.athird {
+  color: white;
+  width: 40rem;
+  height: 25rem;
+  margin-left:8%;
+  margin-right: 8%;
+  background-color: purple;
+  float:left;
+  overflow-x: auto;
+  word-wrap: anywhere;
+  font-size: 10px;
+}
+
+.athird1 {
+  color: white;
+  width: 40rem;
+  height: 25rem;
+  margin-left:8%;
+  margin-right: 8%;
+  background-color: purple;
+  
 }
 
 .App-header {
   background-color:black;
-  min-height: 100vh;
+  min-height: 70vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding-top: 3%;
+  
 }
 
 .App-link {
@@ -36,6 +70,28 @@
 .sitename {
   color:blue;
   height: 10rem;
+  position: absolute;
+  top: 13rem;
+  z-index: 2;
+}
+
+.purple {
+  color: orange;
+}
+
+.onethird {
+  color: white;
+  width: 40rem;
+  height: 3rem;
+  margin-left:8%;
+  margin-right: 8%;
+  font-size: 2rem;
+  text-align: center;
+  
+}
+
+.centertext {
+  text-align: center;
 }
 
 @keyframes App-logo-spin {
